Bug 148292 - UI: Right column of settings is moving when changing Units of measurement
Summary: UI: Right column of settings is moving when changing Units of measurement
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-31 12:18 UTC by Telesto
Modified: 2022-04-01 05:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-03-31 12:18:08 UTC
Description:
UI: Right column of settings is moving when changing Units of measurement

Steps to Reproduce:
1. Open Impress (English UI)
2. tools -> Options ->  Impress -> General
3. In the drop down 'units of measurement' select different entry and look at the right where "Presentation' and 'Text objects' are located 

Actual Results:
Shifting left/right

Expected Results:
Stable position, independent of user action


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 2816f498505bab01bc0f17ef0962ece663c607c9
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL Jumbo
Comment 1 Telesto 2022-03-31 12:18:48 UTC
A minor annoyance..
Comment 2 Rainer Bielefeld Retired 2022-03-31 13:59:02 UTC
REPRODUCIBLE with Server Installation of Version: 7.4.0.0.alpha0+ (x64)  Build ID b000d964fcc8849d10576bf3539bde7729db2eb1
CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: default; VCL: win
Locale: de-DE (de_DE); UI: en-US  |  Calc: CL  |  Auto Colibre Theme  |  Special devUserProfile

Additional Info:
a) Not limited to Impress, same with Draw
b) root of the problem seems to be that width of drop down changes without 
   visible reason.
c) With German UI Language also width of drop down changes, but position of
   'Presentation' and 'Text objects' keeps stable
c1) With Finnish UI similar to English UI
Comment 3 Rainer Bielefeld Retired 2022-03-31 14:06:22 UTC
Well: in comment 2 I should have written "Englisch UI"

d) Already REPRODUCIBLE with  Installation of Version: 7.3.0.3 (x64) 
Build ID a69ca51ded25f3eefd52d7bf9a5fad8c90b87951
CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win | Locale: de-DE (de_DE); UI: de-DE | Calc: threaded | ElementaryTheme | My normal User Profile

d1) Was not a problem with Server Installation of Version: 6.0.7.3 (x64) 
Build-ID dc89aa7a9eabfd848af146d5086077aeed2ae4a5; CPU-Threads: 12; BS: Windows 10.0; UI-Render: GL; Gebietsschema: de-DE (de_DE); Calc: CL, Special devUserProfile
With 7.x the structure of the dialog changed, probably introduced with that modification.
Comment 4 Rainer Bielefeld Retired 2022-03-31 14:09:38 UTC
e) No obvious DUPs found with query yhttps://bugs.documentfoundation.org/buglist.cgi?cmdtype=dorem&remaction=run&namedcmd=DUPs148292&sharer_id=19321>
Comment 5 Commit Notification 2022-04-01 05:33:46 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d3e7dd4d4ddc88ba60be6ce5e90a1d1fcde47cca

Resolves tdf#148292 - Keep UI static for Impress' general options

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.