Resolves tdf#148292 - Keep UI static for Impress' general options

Right frame changes left position depending on unit's spinedit
Added an arbitrary width request to make the UI static

Change-Id: Ibb9033627bdd0d73108862d5e48683935eab0fdf